@@ -79,11 +79,13 @@ onChange file
 
 	mergecurrent (Just current)
 		| equivBranches changedbranch current = do
-			debug
-				[ "merging", Git.fromRef changedbranch
-				, "into", Git.fromRef current
-				]
-			void $ liftAnnex  $ autoMergeFrom changedbranch (Just current) Git.Branch.AutomaticCommit
+			void $ liftAnnex $ autoMergeFrom changedbranch (Just current) Git.Branch.AutomaticCommit 
+			whenM (liftAnnex $ inRepo $ Git.Branch.changed current changedbranch) $ do
+				debug
+					[ "merging", Git.fromRef changedbranch
+					, "into", Git.fromRef current
+					]
+				void $ liftAnnex $ autoMergeFrom changedbranch (Just current) Git.Branch.AutomaticCommit
 	mergecurrent _ = noop
 
 	handleDesynced = case fromTaggedBranch changedbranch of
